[package]
name = "geyser-neon-filter"
version = "1.0.0"
edition = "2021"
description = "Neon geyser filter"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
ahash = { version = "0.8.3", features = ["serde"] }
clap = "4.2.1"
chrono = { version = "0.4.24", features = ["serde"] }
tokio = { version = "1.27.0", features = ["full"] }
rdkafka = { version = "0.29.0", features = ["cmake-build", "ssl", "sasl" , "zstd", "libz-static"] }
serde = "1.0.159"
serde_json = "1.0.95"
kafka_common = { git = "https://github.com/neonlabsorg/geyser-neon-plugin.git", branch = "main" }
log = "0.4.17"
fast_log = { version = "1.5.54" }
flume = "0.10.14"
deadpool-postgres = { version = "0.10.5" }
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.5", features = ["derive"] }
solana-runtime = { version = "=1.14.14" }
solana-transaction-status = { version = "=1.14.14" }
solana-sdk = { version = "=1.14.14" }
anyhow = "1.0.70"
bs58 = "0.4.0"
strum = "0.24"
strum_macros = "0.24"
build-info = { version = "0.0.30" }
prometheus-client = "0.20.0"
hyper = { version = "0.14.25", features = ["server", "http1", "tcp"] }
notify = "5.1"

[build-dependencies]
build-info-build = { version = "0.0.30" }
