[package]
name = "clickhouse-cli"
version = "1.0.0"
edition = "2021"
description = "Clickhouse command line utility"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
clickhouse = { version = "0.11.3", features = ["time"] }
clap = "4.1.8"
inquire = { version = "0.6.0" }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
anyhow = "1.0.69"
bs58 = "0.4.0"
serde_repr = "0.1.11"
time = { version = "0.3.20", features = ["serde"] }

[dev-dependencies]
clickhouse = { version = "0.11.3", features = ["test-util"] }
