[package]
name = "clickhouse-cli"
version = "1.0.0"
edition = "2021"
description = "Clickhouse command line utility"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
clickhouse = { version = "0.11.3", features = ["time"] }
clap = "4.2.2"
inquire = { version = "0.6.1" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.70"
bs58 = "0.4.0"
serde_repr = "0.1.12"
time = { version = "0.3.20", features = ["serde"] }

[dev-dependencies]
clickhouse = { version = "0.11.3", features = ["test-util"] }
