[package]
name = "clickhouse-scheduler"
version = "0.1.0"
edition = "2021"
description = "Clickhouse task scheduler"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
humantime = "2.1"
clap = "4.2.1"
clickhouse = { version = "0.11.3", features = ["time"] }
hyper = "0.14.14"
log = "0.4.17"
fast_log = { version = "1.5.54" }
