[package]
name = "clickhouse-scheduler"
version = "1.0.0"
edition = "2021"
description = "Clickhouse task scheduler"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
humantime-serde = "1.1.1"
humantime = "2.1"
clap = "4.2.2"
clickhouse = { version = "0.11.3", features = ["time"] }
hyper = {version = "0.14.26", features = ["server"] }
log = "0.4.17"
anyhow = "1.0.70"
tryhard = "0.5.0"
fast_log = { version = "1.5.54" }
prometheus-client = "0.20.0"
