[package]
name = "clickhouse-scheduler"
version = "1.0.0"
edition = "2021"
description = "Clickhouse task scheduler"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
humantime-serde = "1.1.1"
humantime = "2.1"
clap = "4.3.0"
clickhouse = { version = "0.11.4", features = ["time"] }
hyper = {version = "0.14.26", features = ["server"] }
log = "0.4.18"
anyhow = "1.0.71"
tryhard = "0.5.0"
fast_log = { version = "1.5.54" }
prometheus-client = "0.21.1"
tokio-cron-scheduler = { version = "0.9.4", features = ["signal"] }
